# ocl_test

./: CMakeLists.txt  FindOpenCL.cmake  README.md  main.cpp
include/: opencl2_utils.hpp  opencl_utils.hpp
src/: cl_tutorial_2_copy.cl  imblur.cpp  imconvBuffer.cpp  imconvBufferSplit.cpp  imcopyBuffer.cpp  imcopyImg.cpp  kernel.cl  kernelConv.cl  kernelCopy.cl  ocl2test.cpp  vecadd.cpp  vecadd_self.cpp
